--- a/app/src/main/res/drawable/activated_background.xml
+++ b/app/src/main/res/drawable/activated_background.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_activated="true" android:drawable="@drawable/abc_list_selector_background_transition_holo_dark" />
+    <item android:state_activated="true" android:drawable="@drawable/abc_list_pressed_holo_dark" />
+    <item android:state_pressed="true" android:drawable="@drawable/abc_list_pressed_holo_dark" />
+    <item android:state_long_pressable="true" android:drawable="@drawable/abc_list_pressed_holo_dark" />
     <item  android:drawable="@android:color/transparent" />
 </selector>
