--- a/app/src/main/res/layout/drawer_list_item_layout.xml
+++ b/app/src/main/res/layout/drawer_list_item_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:theme="@style/MainTheme"
     android:orientation="vertical"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:layout_width="match_parent"
