--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -8,7 +8,11 @@
         <com.jenzz.materialpreference.CheckBoxPreference
             android:key="@string/show_note_history_log_key"
             android:title="@string/show_note_history_log"
+            android:defaultValue="true"
             android:summary="@string/show_note_history_log_summary"/>
+        <com.jenzz.materialpreference.CheckBoxPreference
+            android:key="@string/flow_note_item_layout_key"
+            android:title="@string/flow_note_item_layout"/>
         <com.jenzz.materialpreference.Preference
             android:key="@string/sync_account_key"
             android:title="@string/sync_account"/>
