add different theme for you to choose

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:theme="@style/AboutTheme"
     android:background="?attr/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -18,7 +17,6 @@
         android:overScrollMode="never">
         <LinearLayout
             android:orientation="vertical"
-            android:theme="@style/AboutTheme"
             android:background="?attr/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -27,19 +25,19 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="120dp"
-                android:textColor="?android:textColorPrimary"
+                android:textColor="@android:color/white"
                 android:textSize="@dimen/abc_text_size_display_1_material"
                 android:text="@string/app_name"/>
             <TextView
                 android:id="@+id/version_text"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:textColor="?android:textColorSecondary"
+                android:textColor="@android:color/white"
                 android:textSize="@dimen/abc_text_size_medium_material"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <com.balysv.materialripple.MaterialRippleLayout
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="120dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_width="match_parent"
