--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,13 +3,11 @@
     <!-- Base application theme. -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/warm_red</item>
-        <item name="colorPrimaryDark">@color/dark_warm_red</item>
         <item name="android:fitsSystemWindows">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
-        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorPrimary">@color/text_color_primary</item>
+        <item name="android:textColorSecondary">@color/text_second_color_primary</item>
         <item name="android:windowBackground">@color/window_background</item>
         <item name="searchViewStyle">@style/SearchViewStyle</item>
         <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextView</item>
@@ -19,25 +17,24 @@
         <item name="selectableItemBackground">@drawable/selectable_background</item>
     </style>
 
-    <style name="AppBaseTheme.Light" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppBaseTheme.Dark" parent="Theme.AppCompat.Light.DarkActionBar">
 
-        <item name="colorPrimary">@color/warm_red</item>
-        <item name="colorPrimaryDark">@color/dark_warm_red</item>
         <item name="android:fitsSystemWindows">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
-        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorPrimary">@color/text_color_primary</item>
+        <item name="android:textColorSecondary">@color/text_second_color_primary</item>
         <item name="android:windowBackground">@color/window_background</item>
         <item name="searchViewStyle">@style/SearchViewStyle</item>
         <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextView</item>
         <item name="popupTheme">@style/popupTheme</item>
         <item name="popupMenuStyle">@style/popupMenuStyle</item>
+
         <item name="android:activatedBackgroundIndicator">@drawable/activated_background</item>
         <item name="selectableItemBackground">@drawable/selectable_background</item>
     </style>
 
-    <style name="AppTheme" parent="AppBaseTheme">
+    <style name="AppTheme" parent="AppBaseTheme.Dark">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
@@ -45,64 +42,129 @@
         <item name="queryBackground">@android:color/transparent</item>
     </style>
 
-    <style name="popupTheme" parent="AppBaseTheme.Light">
-
+    <style name="popupTheme" parent="AppBaseTheme.Dark">
         <item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="popupMenuStyle" parent="Base.Widget.AppCompat.PopupMenu.Overflow">
     </style>
 
-    <style name="AutoCompleteTextView" parent="Widget.AppCompat.Light.AutoCompleteTextView">
+    <style name="AutoCompleteTextView" parent="Widget.AppCompat.AutoCompleteTextView">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@null</item>
-        <item name="android:textColorHighlight">@color/warm_red</item>
         <item name="android:textColorHint">@android:color/white</item>
-    </style>
-
-    <style name="SettingTheme" parent="AppBaseTheme.Light">
-
-        <item name="android:textColorPrimary">@android:color/black</item>
-        <item name="android:textColorSecondary">@color/grey</item>
-        <item name="colorAccent">@color/warm_red</item>
-    </style>
-
-    <style name="MainTheme" parent="AppBaseTheme.Light">
-        <item name="android:textColorPrimary">@android:color/black</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
-        <item name="colorAccent">@color/warm_red</item>
-    </style>
-
-    <style name="AboutTheme" parent="AppBaseTheme.Light">
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
-        <item name="colorPrimary">@color/warm_red</item>
-        <item name="colorPrimaryDark">@color/dark_warm_red</item>
     </style>
 
     <style name="ToolbarTheme" parent="AppBaseTheme">
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@android:color/white</item>
-        <item name="android:textCursorDrawable">@drawable/cursor_drawable</item>
+        <item name="colorControlActivated">@android:color/white</item>
     </style>
 
-    <style name="NotesItemTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:textColorPrimary">@color/dark_grey</item>
-        <item name="android:textColorSecondary">#848484</item>
-        <item name="colorPrimary">@color/warm_red</item>
-        <item name="colorPrimaryDark">@color/dark_warm_red</item>
-    </style>
-
-    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog">
-        <item name="colorPrimary">@color/warm_red</item>
-        <item name="colorPrimaryDark">@color/dark_warm_red</item>
-        <item name="colorAccent">@color/warm_red</item>
-    </style>
 
     <style name="EditTextTheme">
         <item name="android:textSize">@dimen/abc_text_size_medium_material</item>
-        <item name="android:textCursorDrawable">@drawable/note_cursor_drawable</item>
+        <item name="android:textColor">@android:color/black</item>
+
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+
+
+    <style name="RedTheme" parent="AppBaseTheme.Dark">
+        <item name="colorPrimary">@color/red</item>
+        <item name="colorPrimaryDark">@color/dark_red</item>
+        <item name="colorAccent">@color/accent_red</item>
+    </style>
+
+    <style name="RedDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/red</item>
+        <item name="colorPrimaryDark">@color/dark_red</item>
+        <item name="colorAccent">@color/accent_red</item>
+    </style>
+
+    <style name="BrownTheme" parent="AppBaseTheme.Dark">
+        <item name="colorPrimary">@color/brown</item>
+        <item name="colorPrimaryDark">@color/dark_brown</item>
+        <item name="colorAccent">@color/accent_brown</item>
+    </style>
+
+    <style name="BrownDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/brown</item>
+        <item name="colorPrimaryDark">@color/dark_brown</item>
+        <item name="colorAccent">@color/accent_brown</item>
+    </style>
+
+    <style name="BlueTheme" parent="AppBaseTheme.Dark">
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/dark_blue</item>
+        <item name="colorAccent">@color/accent_blue</item>
+    </style>
+
+    <style name="BlueDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/dark_blue</item>
+        <item name="colorAccent">@color/accent_blue</item>
+    </style>
+
+    <style name="BlueGreyTheme" parent="AppBaseTheme.Dark">
+        <item name="colorPrimary">@color/blue_grey</item>
+        <item name="colorPrimaryDark">@color/dark_blue_grey</item>
+        <item name="colorAccent">@color/accent_blue_grey</item>
+    </style>
+
+    <style name="BlueGreyDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/blue_grey</item>
+        <item name="colorPrimaryDark">@color/dark_blue_grey</item>
+        <item name="colorAccent">@color/accent_blue_grey</item>
+    </style>
+
+    <style name="YellowTheme" parent="AppBaseTheme.Dark">
+        <item name="colorPrimary">@color/yellow</item>
+        <item name="colorPrimaryDark">@color/dark_yellow</item>
+        <item name="colorAccent">@color/accent_yellow</item>
+    </style>
+
+    <style name="YellowDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/yellow</item>
+        <item name="colorPrimaryDark">@color/dark_yellow</item>
+        <item name="colorAccent">@color/accent_yellow</item>
+    </style>
+
+    <style name="DeepPurpleTheme" parent="AppBaseTheme.Dark">
+        <item name="colorPrimary">@color/deep_purple</item>
+        <item name="colorPrimaryDark">@color/dark_deep_purple</item>
+        <item name="colorAccent">@color/accent_deep_purple</item>
+    </style>
+
+    <style name="DeepPurpleDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/deep_purple</item>
+        <item name="colorPrimaryDark">@color/dark_deep_purple</item>
+        <item name="colorAccent">@color/accent_deep_purple</item>
+    </style>
+
+    <style name="PinkTheme" parent="AppBaseTheme.Dark">
+        <item name="colorPrimary">@color/pink</item>
+        <item name="colorPrimaryDark">@color/dark_pink</item>
+        <item name="colorAccent">@color/accent_pink</item>
+    </style>
+
+    <style name="PinkDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/pink</item>
+        <item name="colorPrimaryDark">@color/dark_pink</item>
+        <item name="colorAccent">@color/accent_pink</item>
+    </style>
+
+    <style name="GreenTheme" parent="AppBaseTheme.Dark">
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryDark">@color/dark_green</item>
+        <item name="colorAccent">@color/accent_green</item>
+    </style>
+
+    <style name="GreenDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryDark">@color/dark_green</item>
+        <item name="colorAccent">@color/accent_green</item>
+    </style>
+
 </resources>
