--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -73,6 +73,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </com.balysv.materialripple.MaterialRippleLayout>
+            <TextView
+                android:layout_marginTop="20dp"
+                android:textColor="#33ffffff"
+                android:layout_gravity="center"
+                android:text="@string/about_bottom_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
