--- a/app/src/main/res/layout/notes_item_layout.xml
+++ b/app/src/main/res/layout/notes_item_layout.xml
@@ -28,6 +28,8 @@
                     android:paddingLeft="6dp"
                     android:layout_weight="1.0"
                     tools:text="Label Text"
+                    android:maxLines="14"
+                    android:ellipsize="end"
                     android:lineSpacingExtra="2dp"
                     android:textColor="@color/dark_grey"
                     android:textSize="@dimen/abc_text_size_medium_material"/>
@@ -40,7 +42,6 @@
                     android:background="?android:attr/selectableItemBackground"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
                     android:src="@drawable/ic_more_grey"/>
             </LinearLayout>
             <TextView
@@ -48,6 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="6dp"
+                android:maxLines="40"
                 android:lineSpacingExtra="2dp"
                 android:ellipsize="end"
                 android:textColor="#848484"
