--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="md_simplelistitem_padding_top">8dp</dimen>
     <dimen name="md_dialog_frame_margin">24dp</dimen>
     <dimen name="drawer_width">200dp</dimen>
+    <dimen name="preference_divider_height">0.6dp</dimen>
 </resources>
