--- a/app/src/main/res/anim/activity_down_up_anim.xml
+++ b/app/src/main/res/anim/activity_down_up_anim.xml
@@ -2,11 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/decelerate_interpolator" >
     <translate
-        android:duration="300"
+        android:duration="@android:integer/config_shortAnimTime"
         android:fromYDelta="100%p"
         android:toYDelta="0" />
-    <alpha
-        android:duration="300"
-        android:fromAlpha="0.8"
-        android:toAlpha="1.0" />
 </set>
