--- a/md-preference/src/main/res/layout/mp_preference.xml
+++ b/md-preference/src/main/res/layout/mp_preference.xml
@@ -13,8 +13,7 @@
         android:gravity="center_vertical"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:clipToPadding="false"
-        >
+        android:clipToPadding="false">
         <LinearLayout
             android:id="@+id/icon_frame"
             android:layout_width="wrap_content"
@@ -25,15 +24,13 @@
             android:orientation="horizontal"
             android:paddingRight="12dp"
             android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            >
+            android:paddingBottom="4dp">
             <com.jenzz.materialpreference.PreferenceImageView
                 android:id="@+id/icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxWidth="48dp"
-                android:maxHeight="48dp"
-                />
+                android:maxHeight="48dp" />
         </LinearLayout>
 
         <RelativeLayout
@@ -41,8 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            >
+            android:paddingBottom="16dp">
 
             <TextView
                 android:id="@+id/title"
@@ -51,8 +47,7 @@
                 android:singleLine="true"
                 android:textSize="16sp"
                 android:textColor="?android:attr/textColorPrimary"
-                android:ellipsize="marquee"
-                />
+                android:ellipsize="marquee" />
 
             <TextView
                 android:id="@+id/summary"
@@ -62,8 +57,7 @@
                 android:layout_alignLeft="@id/title"
                 android:textSize="14sp"
                 android:textColor="?android:attr/textColorSecondary"
-                android:maxLines="10"
-                />
+                android:maxLines="10" />
 
         </RelativeLayout>
 
@@ -73,8 +67,7 @@
             android:layout_height="match_parent"
             android:gravity="end|center_vertical"
             android:paddingLeft="16dp"
-            android:orientation="vertical"
-            />
+            android:orientation="vertical" />
 
     </LinearLayout>
 </com.balysv.materialripple.MaterialRippleLayout>
